<resources>

    <!-- common -->

    <string name="app_name">UnifidoKey</string>
    <string name="aid_description">FIDO CTAP2 NFC</string>

    <string name="hint_service">Service</string>
    <string name="hint_user">User</string>
    <string name="hint_username">Username</string>
    <string name="hint_displayName">Display name</string>
    <string name="hint_created_at">Created at</string>
    <string name="hint_credential_storage">Credential storage</string>

    <string name="example_rp_name">Example Relying party</string>
    <string name="example_rp_id">example.com</string>
    <string name="example_username">john.doe@example.com</string>
    <string name="example_display_name">John Doe</string>
    <string name="example_created_at">2020–01–01 00:00:00</string>
    <string name="example_credential_storage">Keystore</string>
    <string name="example_device_name">Desktop PC</string>
    <string name="example_device_status">Connected</string>
    <string name="example_time">2020–01–01 00:00:00</string>
    <string name="example_type">Registration</string>
    <string name="example_event_message">"John Doe" is registered to "example.com"</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>


    <!-- Main Activity -->

    <string name="title_activity_credential_list">UnifidoKey</string>

    <!-- Navigation drawer -->

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UnifidoKey</string>
    <string name="nav_header_subtitle">Strong attested passkey manager</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_licenses">Licenses</string>
    <string name="menu_about">About</string>

    <!-- Home fragment -->
    <string name="warning_none_attestation">\'None attestation\' is not supported by Chrome.</string>
    <string name="warning_androidsafetynet_attestation">\'AndroidSafetyNet attestation\' cannot be used with Bluetooth HID transport.</string>

    <string name="title_hybrid_internal">Hybrid/Internal</string>
    <string name="title_nfc">NFC</string>
    <string name="title_bluetooth_hid">Bluetooth HID</string>
    <string name="button_text_pairing">Pairing</string>
    <string name="title_recent_history">Recent History</string>
    <string name="button_text_more">More</string>
    <string name="checkbox_text_background">Stay Background</string>

    <!-- credential list fragment -->
    <string name="menu_search">Search</string>

    <string name="desc_registration_instruction">Credential is not registered yet.</string>

    <!-- credential details fragment -->

    <string name="menu_delete">Delete</string>
    <string name="text_biometric_authentication">Biometric authentication</string>


    <!-- Lock Screen -->
    <string name="button_text_unlock">Unlock</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>

    <string name="header_transport_options">Transport</string>

    <string name="title_nfc_support">NFC</string>
    <string name="title_ble_support">BLE</string>
    <string name="title_bthid_support">Bluetooth HID</string>
    <string name="title_bthid_pairing">Bluetooth HID Pairing</string>
    <string name="title_bthid_connected_device">Bluetooth HID connected device</string>

    <string name="summary_nfc_support_disabled">NFC transport is not available</string>
    <string name="summary_nfc_support_on">NFC transport is ON</string>
    <string name="summary_nfc_support_off">NFC transport is OFF</string>
    <string name="summary_ble_support_disabled">BLE transport is not available</string>
    <string name="summary_ble_support_on">BLE transport is ON</string>
    <string name="summary_ble_support_off">BLE transport is OFF</string>
    <string name="summary_bthid_support_disabled">Bluetooth HID transport is not available</string>
    <string name="summary_bthid_support_on">Bluetooth HID transport is ON</string>
    <string name="summary_bthid_support_off">Bluetooth HID transport is OFF</string>

    <string name="summary_bthid_pairing">Start Bluetooth HID Pairing</string>


    <string name="header_consent">Consent</string>
    <string name="title_client_pin">ClientPIN</string>

    <string name="title_user_consent">User Consent</string>

    <string name="title_biometric_authentication">Biometric Authentication</string>
    <string name="summary_biometric_authentication">Allow biometric authentication</string>

    <string name="title_consent_caching">Consent Caching (NFC)</string>
    <string name="summary_consent_caching">Cache user consent result</string>

    <string name="reset_protection">Reset Protection (NFC)</string>
    <string name="summary_reset_protection">Refuse reset when enabled</string>

    <string name="header_user_interface">User Interface</string>

    <string name="title_credential_selector">Account Selector (NFC)</string>

    <string name="keep_screen_on">Keep Screen ON</string>
    <string name="summary_keep_screen_on">To keep NFC chip awake</string>

    <string name="title_user_verification">User Verification</string>
    <string name="title_user_presence">User Presence</string>
    <string name="title_alg">Assertion Signature Algorithm</string>

    <string name="developer_options_header">Developer Options</string>

    <string name="title_aaguid">AAGUID</string>

    <string name="title_attestation_type">Attestation Type</string>

    <string name="title_attestation_statement_format">Attestation Statement Format</string>

    <string name="title_resident_key">Resident Key</string>

    <string name="title_key_storage">Key Storage</string>

    <string name="title_platform">Attachment</string>


    <string name="relying_party_icon">Relying Party Icon</string>

    <!-- Consent Activity -->
    <string name="button_text_proceed">Proceed</string>
    <string name="desc_logo">logo</string>
    <string name="desc_registration_request">Service is requesting registration.</string>
    <string name="desc_registration_request_with_placeholder">Service %s is requesting registration.</string>
    <string name="desc_authentication_request">Service is requesting authentication.</string>
    <string name="desc_credential_selection_request">Select an account for %s.</string>

    <!-- About Activity -->
    <string name="title_activity_about">About</string>
    <string name="dummy_version">1.0.0.RELEASE</string>

    <string name="header_config">Configuration</string>
    <string name="summary_config_reset">Reset configurations to defaults</string>
    <string name="title_config_reset">Config Reset</string>
    <string name="menu_help">Help</string>

    <string name="header_external_integration">External Integration</string>
    <string name="title_allowed_app_list">Allowed App List</string>
    <string name="category_accounts">Accounts</string>
    <string name="overflow_menu">overflow menu</string>
    <string name="biometric_authentication_text">Biometric Authentication</string>
    <string name="summary_experimental_mode">Experimental Mode</string>
    <string name="title_experimental_mode">Experimental Mode</string>
    <string name="summary_developer_mode">Developer Mode</string>
    <string name="title_developer_mode">Developer Mode</string>
    <string name="button_text_passkey_provider_settings">Provider Settings</string>


</resources>
