<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/credential_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgGray"
    android:orientation="horizontal"
    android:padding="2dp">

    <ImageView
        android:id="@+id/rpIcon_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:contentDescription="@string/relying_party_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cloud_black"
        app:tint="@color/bgDarkGray" />

    <TextView
        android:id="@+id/rpName_view"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/rpIcon_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/example_rp_name" />

    <TextView
        android:id="@+id/rpId_view"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAlignment="viewEnd"
        android:textColor="?android:textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/rpIcon_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rpName_view"
        tools:text="@string/example_rp_id" />
</androidx.constraintlayout.widget.ConstraintLayout>