<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/credential_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    android:padding="2dp"
    android:paddingStart="2dp"
    android:paddingEnd="0dp">

    <ImageView
        android:id="@+id/userIcon_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:contentDescription="@string/relying_party_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_black"
        app:tint="@color/bgGray" />

    <TextView
        android:id="@+id/displayName_view"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/userIcon_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/example_display_name" />

    <TextView
        android:id="@+id/username_view"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAlignment="viewEnd"
        android:textColor="?android:textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/userIcon_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayName_view"
        tools:text="@string/example_username" />

</androidx.constraintlayout.widget.ConstraintLayout>
